--- a/notes/templates/notes/landing.html
+++ b/notes/templates/notes/landing.html
@@ -1,3 +1,12 @@
 {% extends 'notes/base.html' %}
 {% block content %}
+<table>
+{% for item in object_list %}
+
+    <tr>
+        <td>{{ item.title }}</td>
+        <td>{{ item.text }}</td>
+    </tr>
+{% endfor %}
+</table>
 {% endblock content%}
