feat(notes): add link to the creation of item

--- a/notes/templates/notes/landing.html
+++ b/notes/templates/notes/landing.html
@@ -1,5 +1,6 @@
 {% extends 'notes/base.html' %}
 {% block content %}
+<a href="{% url 'notes:create' %}">Add item</a>
 <table>
 {% for item in items %}
     <tr>
