--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
+{% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+{% endif %}
     <div>
         {% block content %} {% endblock content %}
     </div>
