--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -10,9 +10,23 @@
           integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
-{% if request.user.is_authenticated %}
-<a href="{% url 'logout' %}">Logout</a>
-{% endif %}
+
+<nav class="navbar navbar-expand bg-success">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse">
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="nav-link text-dark bg-light">Logout</a>
+            {% endif %}
+            {% block header %}
+
+            {% endblock header %}
+        </div>
+
+
+    </div>
+</nav>
+
+
 <div class="container">
     {% block content %} {% endblock content %}
 </div>
