--- a/notes/templates/notes/item_form.html
+++ b/notes/templates/notes/item_form.html
@@ -1,8 +1,9 @@
 {% extends 'notes/base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <form method="POST" action="">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
+    {{ form | crispy }}
+    <input type="submit" value="Submit" class="btn btn-success">
 </form>
 {% endblock content%}
