--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -26,10 +26,15 @@
     </div>
 </nav>
 
+<div class="modal position-static d-block py-5 w-50 modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-5 shadow">
+        <div class="d-flex justify-content-center p-5 pb-4 border-bottom-0">
+            {% block content %} {% endblock content %}
+        </div>
 
-<div class="container">
-    {% block content %} {% endblock content %}
+    </div>
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
