--- a/notes/templates/notes/register.html
+++ b/notes/templates/notes/register.html
@@ -1,11 +1,13 @@
 {% extends 'notes/base.html' %}
+{% load crispy_forms_tags %}
+
 {% block header %}
 <a href="{% url 'login' %}" class="nav-link me-auto text-white">Login</a>
 {% endblock header %}
 {% block content %}
-<form method="post">
+<form method="post" class="form-group">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="signup">
+    {{ form | crispy }}
+    <input type="submit" value="signup" class="btn btn-success">
 </form>
 {% endblock content%}
