--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,13 @@
 {% extends 'notes/base.html' %}
+{% load crispy_forms_tags %}
+
 {% block header %}
 <a href="{% url 'notes:register' %}" class="nav-link me-auto text-white">Register</a>
 {% endblock header %}
 {% block content %}
-<form method="post">
+<form method="post" class="form-group">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="login">
+    {{ form | crispy }}
+    <input type="submit" value="login" class="btn btn-success">
 </form>
 {% endblock content%}
