--- a/notes/templates/notes/item_form.html
+++ b/notes/templates/notes/item_form.html
@@ -4,6 +4,6 @@
 <form method="POST" action="">
     {% csrf_token %}
     {{ form | crispy }}
-    <input type="submit" value="Submit" class="btn btn-success">
+    <input type="submit" value="ارسال" class="btn btn-success">
 </form>
 {% endblock content%}
