--- a/notes/templates/notes/success.html
+++ b/notes/templates/notes/success.html
@@ -1,4 +1,4 @@
 {% extends 'notes/base.html' %}
 {% block content %}
-<p>The operation is successful</p>
+<p>عملیات موفقیت آمیز بود.</p>
 {% endblock content %}
