--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="fa">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="collapse navbar-collapse">
             {% if request.user.is_authenticated %}
-            <a href="{% url 'logout' %}" class="nav-link text-dark bg-light">Logout</a>
+            <a href="{% url 'logout' %}" class="nav-link text-dark bg-light">خروج</a>
             {% endif %}
             {% block header %}
 
